Attempting to fix Edge image flickering

--- a/index.less
+++ b/index.less
@@ -303,10 +303,6 @@ table, td {
 	border-collapse: collapse;
 	padding: 40px;
 	background: white;
-	div {
-		min-height: 68px;
-		min-width: 68px;
-	}
 }
 
 td img {
